--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NO MALLA'S'</title>
+    <title>NO MALLA'S</title>
     <link rel="shortcut icon" href="img/barber-pole.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
@@ -67,21 +67,23 @@
                 </div>
                 <div class="col-md-6">
                     <h2>Conheça o Denis Silva</h2>
+                    <h3>É um prazer te ter por aqui</h3>
                     <ul class="ul">
                         <li>
-                            ✔︎ Denis Silva é Barbeiro há mais ... anos ...
+                            ✔︎ Por meio dessa mensagem irei dizer um pouco sobre mim & sobre o meu trabalho.
+                            
                         </li>
                         <li>
-                            ✔︎ Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit quia quis ea delectus neque totam sequi perferendis omnis quas magnam soluta, fugiat in debitis? Sapiente maiores quasi corporis ea similique!
+                            ✔︎ Me chamo Denis Silva, mais conhecido como Denis cortes , sou de São Paulo, Grajaú Zona Sul . 
                         </li>
                         <li>
-                            ✔︎ Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, molestias ratione doloremque ipsum libero aperiam natus nesciunt facilis temporibus, magnam, deserunt asperiores similique doloribus? Eligendi laboriosam deleniti voluptas velit quis.
+                            ✔︎Estou nesse ramo da barbearia há 7 anos , já tive outras profissões, mas, ser barbeiro foi a minha escolha. Também passei por muitos desafios na vida , já morei em ruas , já me alimentei de muitos lixos , mas vencir graças a Deus 🙏
                         </li>
                         <li>
-                            ✔︎ lorem ipsum
+                            ✔︎ Hoje tenho a minha barbearia No MALLA’s, e sou mais que vencedor . Quero dizer pra você que está lendo essa mensagem não desista de algo que você tanto almeja , vem lutas mas, não desista , assim como eu venci você também vai vencer .
                         </li>
                         <li>
-                            ✔︎ lorem ipsum
+                            ✔︎ Veja meus trabalhos lá no Instagram @BarbeariaNoMalla’s_DenisCorte
                         </li>
                     </ul>
                 </div>
